fix vertically maximized windows sometimes being moved out of the screen

...and add a test for it

BUG: 476037